--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
         padding: 0 10px;
         background: #d0d0d0;
         color: #495057;
-        border: 3px solid #fca311;
+/*         border: 2px solid; */
         border-radius: 10px;
         transition: all 0.2s ease 0.3s;
         box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.54);
